--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "mongodb/laravel-mongodb": "^5.1",
+        "orangehill/iseed": "^3.0",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
